--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev":
-      "NODE_ENV=development sequelize db:migrate && NODE_ENV=development nodemon app.js"
+    "start:dev": "NODE_ENV=development sequelize db:migrate && NODE_ENV=development nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.118.0",
     "axios": "^0.15.3",
-    "bluebird": "^3.5.0",
+    "bluebird": "^3.5.1",
     "bunyan": "^1.8.5",
     "bunyan-slack": "0.0.10",
     "client-certificate-auth": "^0.3.0",
