--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev": "NODE_ENV=development sequelize db:migrate && NODE_ENV=development nodemon app.js"
+    "start:dev":
+      "NODE_ENV=development sequelize db:migrate && NODE_ENV=development nodemon app.js",
+    "deploy": "eb deploy zeus-dev"
   },
   "author": "",
   "license": "ISC",
