--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
@@ -28,6 +29,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.33.0",
     "sequelize-cli": "^5.3.0",
+    "swagger": "^0.7.5",
     "swagger-express-mw": "^0.7.0",
     "uuid": "^3.3.2",
     "volleyball": "^1.5.1"
@@ -42,7 +44,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-watch": "^2.1.14",
     "js-beautify": "1.6.14",
-    "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
     "nock": "^9.6.1",
     "nyc": "^11.9.0",
